@startuml 

class Jeu {
    - nb_tuiles: size_t
    - tuiles: vector<Tuile>
    - {static} instance: Jeu*
    - Jeu(nb_joueur: size_t
    + getNbTuiles(): size_t
    + getTuile(i: size_t): Tuile
    + getReservoir(): vector<Tuile*>
    + {static} getInstance(nb_joueur: size_t): Jeu
    + instancierTuiles(nbjoueurs: size_t) 
    + ~Jeu()
}

class Tas {
    - nb_tuiles: size_t
    - tuiles: vector<Tuile*>
    + {explicit} Tas(nbjoueurs: int)
    + ~Tas()
    + getTuilesTas(i: size_t): Tuile* 
    + getNbTuiles(): size_t
    + pushTuile(t: Tuile*)
}

class Pioche {
    - tas: vector<Tas*>
    - curseur: vector<size_t>
    + Pioche()
    + ~Pioche()
    + ajouterTas(t: Tas*) 
    + estVide(): bool
    + piocherDepuisTas(i: size_t): Tuile*
    + prendreIndiceTasNonVide(): int
    + getTasPioche(): vector<Tas*>
    + getCurseur(): vector<size_t>
}

class Table {
    - capacite: size_t
    - visibles: vector<Tuile*>
    - reservoir: vector<Tuile*>
    + Table(nb_joueurs: size_t, res: vector<Tuile*>)
    + taille(): size_t
    + estVide(): bool
    + cout(i: size_t): size_t
    + prendre(i: size_t): Tuile*
    + regarder(i: size_t): Tuile*
    + recharger(p: Pioche) 
    + getCapacite(): size_t
    + tailleReservoir(): size_t
    + tailleR(): size_t
    - remplirDepuisReservoir() 
    - remplirDepuisReservoirOuTas(p: Pioche) 
    - regleUneTuileRestante(p: Pioche) 
}

class Partie {
    - joueurs: vector<Joueur*>
    - pioche: Pioche*
    - chantier: Table*
    - indice_architecte_chef: size_t
    - ModeScore modeActuel
    - ActiveVariants variants
    - en_cours: bool
    + Partie(joueurs_init: vector<Joueur*>, pioche_init: Pioche*, table_init: Table*, mode: ModeScore
    + ~Partie()
    + getNbJoueurs(): size_t
    + getJoueur(indice: size_t): Joueur*
    + getJoueur(indice: size_t): Joueur*
    + getArchitecteChef(): Joueur*
    + getArchitecteChef(): Joueur*
    + getIndiceArchitecteChef(): size_t
    + getPioche(): Pioche*
    + getPioche(): Pioche*
    + getPseudosJoueurs(): set<string>
    + getChantier(): Table*
    + getChantier(): Table*
    + getModeScore(): ModeScore
    + getModeScore(): ModeScore
    + getVariante(): ActiveVariants
    + getVariante(): ActiveVariants
    + demarrer() 
    + terminer() 
    + setArchitecteChef(indice: size_t) 
    + passerArchitecteChefSuivant() 
}

Jeu o-- "*" Tuile
Table o-- "*" Tuile
Tas o-- "*" Tuile
Pioche o-- "*" Tas
Partie *-- "1" Pioche
Partie *-- "1" Table
Partie *-- "1" ModeScore
Partie *-- "1" ActiveVariants
Partie o-- "*" Joueur

@enduml